cleaned up the css for the original tree widget. stopped the jumpy border on hover effect. removed cruft
git-svn-id: http://svn.dojotoolkit.org/src/trunk@1988 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/widget/templates/TreeNode.css
+++ b/src/widget/templates/TreeNode.css
@@ -1,14 +1,19 @@
-.TreeNodeContainer, .TreeNodeTitle, .TreeNodeHeader {
+.TreeNodeContainer,
+.TreeNodeTitle,
+.TreeNodeHeader {
 	display: block;
 	cursor: default;
-    border-width:1px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: transparent;
 }
+
 .TreeNodeTitle {
 	display: inline;
 	color : #333333;
 	font-size: 10pt;
-    padding: .2em;
-    cursor: pointer;
+	padding: .2em;
+	cursor: pointer;
 }
 
 .TreeNodeImage,
@@ -16,43 +21,24 @@
 	vertical-align: middle;
 }
 
-.TreeNodeParent {
-   /* border-left-color: #8b0000;
-    border-left-style: solid;
-    border-left-width: 1px; */
-}
-
 .TreeNodeContainer {
-    margin-left: 1em;
+	margin-left: 1em;
 }
 
 .TreeNodeSelected {
-    background:#465B92;
-    color : #ffffff;
-    border-color: #465B92;
-}
-
-.TreeNodeContainer {
-    /*list-style:none;*/
-    /*padding-left: 4px;*/
-    /*padding-bottom: 1em;*/
-    /*border-color: #8b0000;*/
-    /*border-style: solid;*/
-    /*margin: 4px;*/
+	background:#465B92;
+	color : #ffffff;
+	border-color: #465B92;
 }
 
 .TreeNodeBody {
-    display: none;
-    /*background: #f5f5dc;*/
-    /*border-color: #daa520;*/
-    /*border-style: solid;*/
-    /*margin: 4px;*/
+	display: none;
 }
 
 .TreeNodeHeader:hover {
 	background: #dddddd;
-    border-color: #a9a9a9;
-    border-style: solid;
-    border-width: 1px;
-    color : #333333;
+	border-color: #a9a9a9;
+	border-style: solid;
+	border-width: 1px;
+	color : #333333;
 }
